[package]
name = "gwas-summary-statistics-app"
version = "0.1.0"
authors = ["Marc André Legault <legaultmarc@gmail.com>"]
edition = "2018"


[dependencies]
walkdir = "2"
statrs = "0.6.0"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
clap = "~2.32.0"
csv = "1"
enum-display-derive = "0.1"
genepa_rs = { git = "ssh://git@github.com/legaultmarc/genepa-rs.git", package = "genepa_rs" }
